--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
                     Nike Air Zoom Pegasus 33 dokonale padne, dodá pocit rychlosti a má pružné tlumení, které ti umožní zrychlit tempo a soustředit se na rychlost.
                 </p>
 
-                <hr>
+                <hr class="cara"/>
 
                 <h2 class="parametr">Velikost</h2>
 
                 <ul class="velikosti">
-                    <li>35</li>
-                    <li>36</li>
-                    <li>37</li>
-                    <li class="vybrana">38</li>
-                    <li>39</li>
-                    <li>40</li>
+                    <li><a href="#">35</a></li>
+                    <li><a href="#">36</a></li>
+                    <li><a href="#">37</a></li>
+                    <li><a href="#">38</a></li>
+                    <li><a href="#">39</a></li>
+                    <li><a href="#">40</a></li>
                 </ul>
 
                 <div class="akce">
